--- a/my app/app/src/main/res/layout/activity_start.xml
+++ b/my app/app/src/main/res/layout/activity_start.xml
@@ -1,83 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_height="match_parent"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Start"
-    android:background="@drawable/rural2"
-    >
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/rural2"
+        tools:context=".Start">
 
 
-    <Button
-        android:id="@+id/button8"
-        style="@android:style/Widget.Holo.Button"
-        android:layout_width="138dp"
-        android:layout_height="48dp"
+        <Button
+            android:id="@+id/button"
 
-        android:layout_marginStart="52dp"
-        android:layout_marginLeft="52dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/start_bor"
-        android:text="SIGN UP"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintStart_toStartOf="parent" />
+            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+            android:layout_width="123dp"
+            android:layout_height="50dp"
+            android:textAlignment="center"
+            android:layout_marginStart="144dp"
+            android:layout_marginLeft="144dp"
+            android:layout_marginEnd="144dp"
+            android:layout_marginRight="144dp"
+            android:layout_marginBottom="64dp"
+            android:text="Travel Guide?"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/start_login"
-        style="@android:style/Widget.Holo.Button"
-        android:layout_width="138dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginRight="52dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/start_bor"
-        android:text="LOGIN"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/button"
-
-        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-        android:layout_width="123dp"
-        android:layout_height="50dp"
-
-        android:layout_marginStart="144dp"
-        android:layout_marginLeft="144dp"
-        android:layout_marginEnd="144dp"
-        android:layout_marginRight="144dp"
-        android:layout_marginBottom="40dp"
-        android:text="Travel Guide?"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="312dp"
-        android:layout_height="97dp"
-        android:layout_marginStart="49dp"
-        android:layout_marginLeft="49dp"
-        android:layout_marginTop="98dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="397dp"
-        android:fontFamily="sans-serif-condensed"
-        android:text="We travel not to escape life
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="312dp"
+            android:layout_height="97dp"
+            android:layout_marginStart="49dp"
+            android:layout_marginLeft="49dp"
+            android:layout_marginTop="98dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginRight="50dp"
+            android:fontFamily="sans-serif-condensed"
+            android:text="We travel not to escape life
 But for life not to escape us"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="30dp"
-        android:textStyle="italic"
-        app:fontFamily="@font/galada"
-        app:layout_constraintBottom_toTopOf="@+id/button8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.ConstraintLayout>
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="30dp"
+            android:textStyle="italic"
+            app:fontFamily="@font/galada"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="58dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/button"
+            tools:layout_editor_absoluteX="0dp">
+
+            <Button
+                android:id="@+id/start_login"
+                style="@android:style/Widget.Holo.Button"
+                android:layout_width="138dp"
+                android:layout_height="48dp"
+                android:layout_marginRight="20sp"
+                android:background="@drawable/start_bor"
+                android:text="LOGIN"
+                app:layout_constraintBottom_toTopOf="@+id/button"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <Button
+                android:id="@+id/button8"
+                style="@android:style/Widget.Holo.Button"
+                android:layout_width="138dp"
+                android:layout_height="48dp"
+                android:layout_marginLeft="20sp"
+                android:background="@drawable/start_bor"
+                android:text="SIGN UP"
+                app:layout_constraintBottom_toTopOf="@+id/button"
+                app:layout_constraintStart_toStartOf="parent" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/button2"
+
+            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+            android:layout_width="123dp"
+            android:layout_height="50dp"
+            android:textAlignment="center"
+            android:layout_marginBottom="16dp"
+            android:text="Admin?"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
 </ScrollView>
