--- a/my app/app/src/main/res/layout/fragment_user_homefragment.xml
+++ b/my app/app/src/main/res/layout/fragment_user_homefragment.xml
@@ -2,18 +2,18 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".userHomefragment">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
 
         <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
             <LinearLayout
                 android:id="@+id/linearLayout3"
@@ -61,44 +61,15 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <ListView
+                android:id="@+id/listPackages"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_marginTop="8dp"
-                android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:padding="5dp"
+                android:layout_height="match_parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
-                <android.support.v7.widget.CardView
-                    android:layout_width="fill_parent"
-                    android:layout_height="245dp"
-                    android:layout_gravity="center_horizontal"
-                    app:cardElevation="4dp"
-                    app:cardCornerRadius="5dp">
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
-                    <ImageView
-                        android:id="@+id/imageOfPackage"
-                        android:layout_width="fill_parent"
-                        android:layout_height="190dp"
-                        android:background="@drawable/dark"
-                        android:contentDescription="TODO"
-                        android:scaleType="centerCrop" />
-
-                    <TextView
-                        android:id="@+id/nameOfPackage"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginLeft="5dp"
-                        android:text="Photo Title"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="#fff" />
-
-                </android.support.v7.widget.CardView>
-            </LinearLayout>
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
