--- a/my app/app/src/main/res/layout/activity_rural__traveller.xml
+++ b/my app/app/src/main/res/layout/activity_rural__traveller.xml
@@ -28,7 +28,7 @@
 
         <ScrollView
             android:id="@+id/login_form"
-            android:layout_width="390dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
@@ -88,8 +88,8 @@
                     style="@android:style/Widget.Holo.Button"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
                     android:layout_marginLeft="60dp"
+                    android:layout_marginTop="16dp"
                     android:background="@drawable/shit"
                     android:text="@string/action_sign_in_short" />
 
@@ -98,15 +98,13 @@
                     style="@android:style/Widget.Holo.Button.Borderless.Small"
                     android:layout_width="250dp"
                     android:layout_height="37dp"
-                    android:text="Forgot Password"
                     android:layout_marginLeft="60dp"
-                    android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="Forgot Password"
                     android:textColor="#fff"
                     tools:layout_editor_absoluteX="124dp"
                     tools:layout_editor_absoluteY="30dp" />
-
-
 
 
             </LinearLayout>
