--- a/my app/app/src/main/res/layout/fragment_user_notification.xml
+++ b/my app/app/src/main/res/layout/fragment_user_notification.xml
@@ -6,9 +6,14 @@
     tools:context=".userNotificationFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="hello_blank_fragment" />
+        android:layout_height="match_parent">
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/list">
+        </ListView>
+    </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
