--- a/my app/app/src/main/res/layout/activity_userdash.xml
+++ b/my app/app/src/main/res/layout/activity_userdash.xml
@@ -4,24 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home"
-    android:background="#08b">
+    android:background="#08b"
+    tools:context=".Home">
+
     <android.support.v4.view.ViewPager
         android:id="@+id/pager_container1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.design.widget.TabLayout
         android:id="@+id/bottom_navigation1"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_gravity="bottom"
         android:background="#aaa"
-        app:tabIndicatorHeight="6dp"
         app:itemIconTint="#FFFF"
-        app:tabIndicatorColor="#f00"
         app:itemTextColor="#FFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:tabIndicatorColor="#f00"
+        app:tabIndicatorHeight="4dp" />
 </android.support.constraint.ConstraintLayout>
