--- a/my app/app/src/main/res/layout/fragment_user_explore.xml
+++ b/my app/app/src/main/res/layout/fragment_user_explore.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -93,4 +97,4 @@
 
 
 
-</LinearLayout>
+</LinearLayout></ScrollView>
