--- a/my app/app/src/main/res/layout/fragment_user_homefragment.xml
+++ b/my app/app/src/main/res/layout/fragment_user_homefragment.xml
@@ -65,12 +65,15 @@
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+            android:divider="@null"
+            android:dividerHeight="4dp"/>
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
