--- a/my app/app/src/main/res/layout/package_element.xml
+++ b/my app/app/src/main/res/layout/package_element.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/package_background">
 
     <LinearLayout
+        android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,6 +24,7 @@
             android:paddingLeft="20sp"
             android:paddingTop="10sp"
             android:text="TextView"
+            android:textColor="#047"
             android:textSize="21sp" />
 
         <TextView
@@ -31,6 +34,8 @@
             android:paddingLeft="20sp"
             android:paddingTop="5sp"
             android:text="TextView"
+            android:textColor="#047"
+
             android:textSize="18sp" />
 
         <TextView
@@ -40,6 +45,8 @@
             android:paddingLeft="20sp"
             android:paddingTop="5sp"
             android:text="TextView"
+            android:textColor="#047"
+
             android:textSize="18sp" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
