Custom search working

--- a/my app/app/src/main/res/layout/fragment_user_homefragment.xml
+++ b/my app/app/src/main/res/layout/fragment_user_homefragment.xml
@@ -18,7 +18,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="#20000000">
 
             <ImageView
                 android:id="@+id/imageView6"
@@ -65,15 +66,15 @@
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
             android:divider="@null"
-            android:dividerHeight="4dp"/>
+            android:dividerHeight="8dp"/>
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
