--- a/my app/app/src/main/res/layout/fragment_user_explore.xml
+++ b/my app/app/src/main/res/layout/fragment_user_explore.xml
@@ -1,20 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_height="fill_parent"
+<ScrollView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="fill_parent"
     android:layout_width="fill_parent"
     android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android" >
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     tools:context=".userExploreFragment"
     android:orientation="vertical">
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TOP VISITED VILLAGES"
-        android:layout_marginLeft="10dp"/>
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:background="#20000000"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:text="TOP VISITED VILLAGES" />
+
+        <ImageButton
+            android:id="@+id/searchIntent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#20000000"
+            android:src="@android:drawable/ic_menu_search" />
+    </LinearLayout>
+
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.CardView
         android:background="@drawable/boundry"
