--- a/my app/app/src/main/res/layout/activity_packages.xml
+++ b/my app/app/src/main/res/layout/activity_packages.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
-            android:layout_height="346dp"
+            android:layout_height="310dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
@@ -50,7 +50,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="416dp"
+            android:layout_marginTop="387dp"
             android:layout_marginEnd="25dp"
             android:layout_marginRight="25dp"
             android:text="Landour"
@@ -68,7 +68,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
-            android:layout_marginTop="418dp"
+            android:layout_marginTop="387dp"
             android:layout_marginEnd="272dp"
             android:layout_marginRight="272dp"
             android:text="VILLAGE :"
@@ -86,7 +86,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
-            android:layout_marginTop="446dp"
+            android:layout_marginTop="419dp"
             android:layout_marginEnd="213dp"
             android:layout_marginRight="213dp"
             android:text="OUR RATE :"
@@ -100,7 +100,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="449dp"
+            android:layout_marginTop="419dp"
             android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
             android:text="    5870"
@@ -118,7 +118,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
-            android:layout_marginTop="481dp"
+            android:layout_marginTop="450dp"
             android:layout_marginEnd="190dp"
             android:layout_marginRight="190dp"
             android:text="DURATION :"
@@ -132,7 +132,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="-221dp"
             android:layout_marginLeft="-221dp"
-            android:layout_marginTop="480dp"
+            android:layout_marginTop="450dp"
             android:layout_toEndOf="@+id/textView6"
             android:layout_toRightOf="@+id/textView6"
             android:text="4 Nights and 5 Days"
@@ -150,7 +150,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
-            android:layout_marginTop="512dp"
+            android:layout_marginTop="480dp"
             android:layout_marginEnd="289dp"
             android:layout_marginRight="289dp"
             android:text="ITENARY :"
@@ -160,12 +160,12 @@
         <ScrollView
             android:id="@+id/mscroll1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="142dp"
             android:layout_above="@+id/mBuy"
             android:layout_below="@+id/textView8"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="6dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginBottom="-7dp"
@@ -181,22 +181,18 @@
 
         <Button
             android:id="@+id/mBuy"
-            android:layout_width="339dp"
-            android:layout_height="63dp"
+            android:layout_width="329dp"
+            android:layout_height="64dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
-            android:layout_marginEnd="72dp"
-            android:layout_marginRight="72dp"
             android:layout_marginBottom="0dp"
             android:text="Check Guide Availability" />
 
         <ImageView
-            android:id="@+id/imageButton5"
+            android:id="@+id/food"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/textView3"
@@ -213,7 +209,7 @@
             tools:ignore="VectorDrawableCompat" />
 
         <ImageView
-            android:id="@+id/imageButton6"
+            android:id="@+id/network"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView3"
@@ -230,7 +226,7 @@
             tools:ignore="VectorDrawableCompat" />
 
         <ImageView
-            android:id="@+id/imageButton7"
+            android:id="@+id/transport"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView3"
@@ -255,44 +251,66 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginStart="338dp"
-            android:layout_marginLeft="338dp"
-            android:layout_marginTop="54dp"
-            android:layout_marginEnd="33dp"
-            android:layout_marginRight="33dp"
+            android:layout_marginStart="361dp"
+            android:layout_marginLeft="361dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="10dp"
+            android:visibility="invisible"
+            android:layout_marginRight="10dp"
             app:srcCompat="@drawable/ic_thumb_up_black_24dp"
             tools:ignore="VectorDrawableCompat" />
-
-        <TextView
-            android:id="@+id/textView13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/imageView3"
-            android:layout_alignRight="@+id/imageView3"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="304dp"
-            android:layout_marginLeft="304dp"
-            android:layout_marginEnd="49dp"
-            android:layout_marginRight="49dp"
-            android:layout_marginBottom="610dp" />
 
         <ImageView
             android:id="@+id/imageView6"
             android:layout_width="66dp"
             android:layout_height="62dp"
-            android:layout_alignStart="@+id/mBuy"
-            android:layout_alignLeft="@+id/mBuy"
             android:layout_alignEnd="@+id/textView3"
             android:layout_alignRight="@+id/textView3"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="341dp"
-            android:layout_marginLeft="341dp"
+            android:layout_marginStart="29dp"
+            android:layout_marginLeft="29dp"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="0dp"
+            android:layout_toEndOf="@+id/mBuy"
+            android:layout_toRightOf="@+id/mBuy"
             app:srcCompat="@drawable/ic_guide_available"
+            tools:ignore="VectorDrawableCompat" />
+
+        <ImageView
+            android:id="@+id/imageunlike"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/imageView3"
+            android:layout_alignLeft="@+id/imageView3"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="358dp"
+            android:layout_marginLeft="358dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="13dp"
+            android:layout_marginRight="13dp"
+            android:visibility="invisible"
+
+            app:srcCompat="@drawable/ic_thumb_up_blue_40dp"
+            tools:ignore="VectorDrawableCompat" />
+
+        <ImageView
+            android:id="@+id/stay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView3"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="171dp"
+            android:layout_marginLeft="171dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="176dp"
+            android:layout_marginRight="176dp"
+            app:srcCompat="@drawable/ic_hotel_black_24dp"
             tools:ignore="VectorDrawableCompat" />
 
 
