--- a/my app/app/src/main/res/drawable/border2.xml
+++ b/my app/app/src/main/res/drawable/border2.xml
@@ -12,6 +12,6 @@
         android:color="#fff">
 
     </stroke>
-    <solid android:color="#009688"/>
+    <solid android:color="#08b"/>
 
 </shape>
