--- a/my app/app/src/main/res/layout/activity_home.xml
+++ b/my app/app/src/main/res/layout/activity_home.xml
@@ -17,7 +17,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:src="@drawable/img"
-        app:civ_border_color="@color/colorPrimary"
+        app:civ_border_color="#8be"
         app:civ_border_width="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.461"
