--- a/my app/app/src/main/res/layout/activity_userdash.xml
+++ b/my app/app/src/main/res/layout/activity_userdash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#08b"
+    android:background="@drawable/dark"
     tools:context=".Home">
 
     <android.support.v4.view.ViewPager
