--- a/my app/app/src/main/res/layout/activity_village_home.xml
+++ b/my app/app/src/main/res/layout/activity_village_home.xml
@@ -20,7 +20,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/colorPrimary"
+            android:background="#08b"
             />
 
         <android.support.v4.view.ViewPager
@@ -213,7 +213,7 @@
                     android:layout_marginBottom="54dp"
                     android:text="How was your visit??"
                     android:padding="7sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/border"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
