--- a/my app/app/src/main/res/layout/fragment_two.xml
+++ b/my app/app/src/main/res/layout/fragment_two.xml
@@ -13,9 +13,15 @@
             android:id="@+id/forumquestionlist"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
+            android:divider="@null"
+            android:dividerHeight="10sp"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
