--- a/my app/app/src/main/res/values/colors.xml
+++ b/my app/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#BE00574B</color>
     <color name="colorAccent">#1B1D27</color>
+    <color name="accountList">#30ffffff</color>
 </resources>
